# dpetl

./: CHANGELOG.md  README.md  datapackage.yaml  pyproject.toml
dpetl/: cli.py  helpers.py
dpetl/extract/: api.py  cli.py  email.py
dpetl/helpers/: iterator.py  network.py
etl/: cli.py  helpers.py
etl/extract/: api.py  api_cli.py  cli.py  email.py  email_cli.py  email_email_logic.py  extract_gmail.py
tests/: test_main.py
